data: fresh per-run spec-eval reports from the clean re-eval (+ strip nested playpen .git)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>